cmake_minimum_required(VERSION 4.0)
project(Module2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Module2 main.cpp
        activity3.cpp
        activity2.cpp
        activity1.cpp
        Activity4.cpp
        Activity4.h
        Activity5.cpp
        Activity5.h
        activity6.cpp
        activity6.h)
